<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329BFF"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duplicate_file"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <TextView
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--扫描中-->
    <LinearLayout
        android:id="@+id/ll_scanning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back">

        <org.libpag.PAGView
            android:id="@+id/pag_loading"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="20dp" />

        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/tv_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:textColor="#CCFFFFFF"
            android:textSize="12sp"
            app:shape_radius="20dp"
            app:shape_solidColor="#14FFFFFF"
            tools:text="路径地址:" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_duplicate_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="42sp"
                tools:text="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duplicate_file_desc"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duplicate_file_take_space"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="50dp">

            <ProgressBar
                android:id="@+id/progressbar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginHorizontal="30dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/shape_duplicate_file_progress_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scanning"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </FrameLayout>

    </LinearLayout>
    <!--扫描结果-->
    <LinearLayout
        android:id="@+id/ll_scan_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_result_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="36sp"
                tools:text="0个" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duplicate_file"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_space"
            android:textColor="#B3FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#5EE2FAFF"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/clean_duplicate_files"
            android:textColor="#CCFFFFFF"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="空文件"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/ll_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_clean"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="25dp"
                    android:text="清理"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>